--- a/index.html
+++ b/index.html
@@ -41,139 +41,138 @@
       </nav>
 
       <section>
-        <div class="container py-5">
+        <div class="container ps-5 py-5">
             <div class="row">
                 <div class="col-lg-8">
-                    <h2>Catalogo Libri</h2>
+                  <div class="column-title d-flex justify-content-between mb-3">
+                    <h4>Catalogo Libri</h4>
                     <button type="button" class="btn btn-primary d-block">Aggiungi Libro</button>
-                    <table class="table">
+                  </div>
+                    <table class="table table-striped align-items-center">
                         <thead>
                             <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">First</th>
-                                <th scope="col">Last</th>
-                                <th scope="col">Handle</th>
+                                <th scope="col">Titolo</th>
+                                <th scope="col">Data Prestito</th>
+                                <th scope="col">div</th>
+                                <th scope="col">Azioni</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td class="badge rounded-pill text-bg-success">Otto</td>
-                                <td>@mdo</td>
+                                <td scope="row">Il signore degli Anelli</td>
+                                <td>-</td>
+                                <td><div class="badge rounded-pill text-bg-success">Disponibile</div></td>
+                                <td><i class="bi bi-pen border border-dark-subtle p-1 me-1"></i><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></td>
+                            </tr>
+                              <tr>
+                                <td scope="row">I Pilastri della Terra</td>
+                                <td>-</td>
+                                <td><div class="badge rounded-pill text-bg-success">Disponibile</div></td>
+                                <td><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></td>
+                            </tr>
+                              <tr>
+                                <td scope="row">Il signore degli Anelli</td>
+                                <td>-</td>
+                                <td><div class="badge rounded-pill text-bg-success">Disponibile</div></td>
+                                <td><i class="bi bi-pen border border-dark-subtle p-1 me-1"></i><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></td>
+                              </tr>
+                            <tr>
+                                <td scope="row">Harry Potter e La pietra filosofale</th>
+                                <td>18-01-2024</td>
+                                <td><div class="badge rounded-pill text-bg-warning">In prestito</div></td>
+                                <td><i class="bi bi-pen border border-dark-subtle p-1 me-1"></i><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></td>
                             </tr>
                             <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td class="badge rounded-pill text-bg-success">Thornton</td>
-                                <td>@fat</td>
-                            </tr>
+                              <td scope="row">Harry Potter e La camera dei segreti</th>
+                              <td>03-07-2023</td>
+                              <td><div class="badge rounded-pill text-bg-warning">In prestito</div></td>
+                              <td><i class="bi bi-pen border border-dark-subtle p-1 me-1"></i><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></td>
+                          </tr>
                             <tr>
-                                <th scope="row">3</th>
-                                <td colspan="2">Larry the Bird</td>
-                                <td>@twitter</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td class="badge rounded-pill text-bg-danger">Otto</td>
-                                <td>@mdo</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td colspan="2">Larry the Bird</td>
-                                <td>@twitter</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td class="badge rounded-pill text-bg-warning">Otto</td>
-                                <td>@mdo</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td class="badge rounded-pill text-bg-danger">Thornton</td>
-                                <td>@fat</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td colspan="2">Larry the Bird</td>
-                                <td><i class="bi bi-trash"></i></td>
-                            </tr>
+                              <td scope="row">il codice da vinci</th>
+                              <td>-</td>
+                              <td><div class="badge rounded-pill text-bg-danger">Non disponibile</div></td>
+                              <td><i class="bi bi-pen border border-dark-subtle p-1 me-1"></i><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></td>
+                          </tr>
+                          <tr>
+                            <td scope="row">Dallas 2024</th>
+                            <td>-</td>
+                            <td><div class="badge rounded-pill text-bg-success">Disponibile</div></td>
+                            <td><i class="bi bi-pen border border-dark-subtle p-1 me-1"></i><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></td>
+                        </tr>
+                        <tr>
+                          <td scope="row">Le cronache del fuoco e del ghiaccio</th>
+                          <td>-</td>
+                          <td><div class="badge rounded-pill text-bg-danger">Non disponibile</div></td>
+                          <td><i class="bi bi-pen border border-dark-subtle p-1 me-1"></i><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></td>
+                      </tr>
+                    
                         </tbody>
                     </table>
                 </div>
                 <div class="col-lg-4">
-
-                  <div class="card" style="width: 18rem;">
-                      <div class="card-header fs-3">ToDo</div>
-                      <div class="card-body border border-dark-subtle">
-                          <ul class="list-group">
-                              <li class="list-group-item">
-                                <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
-                                <label class="form-check-label" for="firstCheckbox">Chiamare Segreteria</label>
-                              </li>
-                              <li class="list-group-item">
-                                <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
-                                <label class="form-check-label" for="secondCheckbox">Avvisi prestiti scaduti</label>
-                              </li>
-                              <li class="list-group-item">
-                                <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
-                                <label class="form-check-label" for="thirdCheckbox">Ordinare nuovi libri</label>
-                              </li>
-                            </ul>
-                      </div>
-                  </div>  
-
-                  <div class="card mt-3" style="width: 18rem;">
-                      <div class="card-header fs-3">F.A.Q.</div>
-                      <div class="accordion" id="accordionExample">
-                          <div class="accordion-item">
-                            <h2 class="accordion-header">
-                              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Come aggiungere un nuovo libro?
-                              </button>
-                            </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                              <div class="accordion-body">
-                                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                              </div>
-                            </div>
-                          </div>
-                          <div class="accordion-item">
-                            <h2 class="accordion-header">
-                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Come posso accedere all'anagrafica utenti?
-                              </button>
-                            </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                              <div class="accordion-body">
-                                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                              </div>
-                            </div>
-                          </div>
-                          <div class="accordion-item">
-                            <h2 class="accordion-header">
-                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Posso usare questa dashboard da mobile?
-                              </button>
-                            </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                              <div class="accordion-body">
-                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                              </div>
-                            </div>
-                          </div>
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-header fs-5">To do</div>
+                        <div class="card-body border border-dark-subtle">
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                  <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                                  <label class="form-check-label" for="firstCheckbox">Chiamare Segreteria</label>
+                                </li>
+                                <li class="list-group-item">
+                                  <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                                  <label class="form-check-label" for="secondCheckbox">Avvisi prestiti scaduti</label>
+                                </li>
+                                <li class="list-group-item">
+                                  <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                                  <label class="form-check-label" for="thirdCheckbox">Ordinare nuovi libri</label>
+                                </li>
+                              </ul>
                         </div>
-                  </div>
-              </div>
+                    </div>  
+
+                    <div class="card mt-3" style="width: 18rem;">
+                        <div class="card-header fs-5">F.A.Q.</div>
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                              <h3 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                  Come aggiungere un nuovo libro?
+                                </button>
+                              </h3>
+                              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h3 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                  Come posso accedere all'anagrafica utenti?
+                                </button>
+                              </h3>
+                              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h3 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                  Posso usare questa dashboard da mobile?
+                                </button>
+                              </h3>
+                              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                </div>
             </div>
         </div>
       </section>
